# python-project-lvl1

./: README.md  pyproject.toml
brain_games/: brain_calc.py  logic.py
brain_games/games/: prime_game.py
brain_games/scripts/: brain_games.py  brain_prime.py  brain_progression.py
