[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games: the collection of 5 math mini-games"
authors = ["spoddub <spoddub98@gmail.com>"]
repository = 'https://github.com/spoddub/python-project-49.git'
readme = "README.md"

packages = [
  { include = "brain_games" },
]

classifiers = [
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
